--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -66,12 +66,10 @@
                                 <span class="day">@item.Date.ToString("dd")</span>
                                 <span class="month">@item.Date.ToString("MMM yyyy")</span>
                             </div>
-
-
                             <div class="blogpost-content">
                                 <header>
                                     <h2 class="title"><a target="_blank" href="~/Blog/MyBlog/@item.BlogUrl">@item.Title</a></h2>
-                                    <div class="submitted"><i class="fa fa-user pr-5"></i> by <a href="#">@item.AuthorName</a><a style="color: black;margin-left: 16px;"><i class="fa fa-eye"></i>@item.TotalView</a></div>
+                                    <div class="submitted"><i class="fa fa-user pr-5"></i> by <a href="/Blog/Author/@(item.AuthorId)-@(item.AuthorName)">@item.AuthorName</a><a style="color: black;margin-left: 16px;"><i class="fa fa-eye"></i>@item.TotalView</a></div>
 
                                 </header>
                                 <p>@item.BlogIntroduction</p>
