--- a/Views/Users/Register.cshtml
+++ b/Views/Users/Register.cshtml
@@ -1,8 +1,16 @@
-﻿@{
+﻿@model List<SelectListItem>
+@{
     ViewBag.Title = "Register";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<style>
+    .note-editor .btn{
+        min-width:0px !important;
+    }
+    .note-editor .btn-sm {
+        min-width: 0px !important;
+    }
+</style>
 <div class="page-intro">
     <div class="container">
         <div class="row">
@@ -23,10 +31,11 @@
                 <!-- main start -->
                 <!-- ================ -->
                 <div class="main object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="300">
-                    <div class="form-block center-block">
+                    <div class="form-block center-block" style="width:auto !important">
                         <h2 class="title">Sign Up</h2>
                         <hr>
                         <div class="form-horizontal">
+
                             <div class="form-group has-feedback">
                                 <label for="inputUserName" class="col-sm-3 control-label">Username <span class="text-danger small">*</span></label>
                                 <div class="col-sm-8">
@@ -73,7 +82,18 @@
                                     <i class="fa fa-pencil form-control-feedback"></i>
                                 </div>
                             </div>
-
+                            <div class="form-group has-feedback">
+                                <label for="Skills" class="col-sm-3 control-label">Skills<span class="text-danger small">*</span></label>
+                                <div class="col-sm-8">
+                                    @Html.DropDownList("Skills", Model, new { @class = "form-control", @multiple = "multiple", @id = "skills" })
+                                </div>
+                            </div>
+                            <div class="form-group has-feedback">
+                                <label for="summernote" class="col-sm-3 control-label">About Self<span class="text-danger small">*</span></label>
+                                <div class="col-sm-8">
+                                    @Html.TextArea("ProfileDescription", new { @class = "form-control", @id = "summernote" })
+                                </div>
+                            </div>
                             <div class="form-group">
                                 <div class="col-sm-offset-3 col-sm-8">
                                     <div class="checkbox">
@@ -100,6 +120,45 @@
 </section>
 @*@Scripts.Render("~/bundles/Tags")*@
 <script>
+    $(document).ready(function () {
+        $("#summernote").summernote({
+            height: 150,                 // set editor height
+            minHeight: null,             // set minimum height of editor
+            maxHeight: null,             // set maximum height of editor
+            focus: true,                  // set focus to editable area after initializing summernote
+            callbacks: {
+                onImageUpload: function (files) {
+                    for (let i = 0; i < files.length; i++) {
+                        UploadImage(files[i]);
+                    }
+                }
+            }
+        });
+        $('#skills').select2();
+    });
+   
+    function UploadImage(file) {
+        var url = "@Url.Action("UploadFile", "SummerNoteEx")";
+        formData = new FormData();
+        formData.append("aUploadedFile", file);
+        $.ajax({
+            type: "POST",
+            url: url,
+            data: formData,
+            cache: false,
+            contentType: false,
+            processData: false,
+            success: function (FileUrl) {
+               // alert(FileUrl);
+                var imgNode = document.createElement("img");
+                imgNode.src = FileUrl;
+                $("#summernote").summernote("insertNode", imgNode);
+            },
+            error: function (data) {
+                alert(data.responseText);
+            }
+        });
+    }
     $('#UserName').on('blur', function () {
         FetchUsername();
     });
@@ -122,7 +181,7 @@
             return false;
         }
         if ($("#Password").val() != "" && $("#FullName").val() != "" && $("#Email").val() != "" && $("#Contact").val() != "" && $("#UserName").val() != "") {
-            var promises = GetAjaxDataPromise('@Url.Action("Registerations", "Users")', { Name: $("#FullName").val(), Email: $("#Email").val(), Contact: $("#Contact").val(), Password: $("#Password").val(), Username: $("#UserName").val() });
+            var promises = GetAjaxDataPromise('@Url.Action("Registerations", "Users")', { Name: $("#FullName").val(), Email: $("#Email").val(), Contact: $("#Contact").val(), Password: $("#Password").val(), Username: $("#UserName").val(), ProfileDescription: $('#summernote').val(), Skills: $('#skills').val().join() });
             promises.done(function (response) {
                 if (response == 0) {
                     LoadPartialView('@Url.Action("SuccessFulRegistration", "Users")', "divuser", {});
@@ -137,13 +196,6 @@
                     });
                 }
             });
-
         }
-
     }
-
-
-
-
-
 </script>
