--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,18 +5,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script data-ad-client="ca-pub-2622840091485569" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-   
+
     <link href="~/prism.css" rel="stylesheet" />
-        <script async custom-element="amp-auto-ads"
-                src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
-        </script>
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114851264-8"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() { dataLayer.push(arguments); }
-            gtag('js', new Date());
-            gtag('config', 'UA-114851264-8');
-        </script>
+    @*<script async custom-element="amp-auto-ads"
+            src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+    </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114851264-8"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-114851264-8');
+    </script>*@
     <title>@ViewBag.Title</title>
 
     @if (!string.IsNullOrEmpty(Convert.ToString(ViewBag.MetaDescription)))
@@ -78,13 +78,14 @@
     <link href="~/adminplugins/select2/css/select2.min.css" rel="stylesheet" />
     <link href="~/css/layouthome.min.css" asp-append-version="true" rel="stylesheet" />
     <script asp-append-version="true" src="~/layoutTop.js"></script>
+    <link  asp-append-version="true" href="~/prism.css" rel="stylesheet" />
 </head>
 <body>
 
 
-    <amp-auto-ads type="adsense"
+    @*<amp-auto-ads type="adsense"
                   data-ad-client="ca-pub-2622840091485569">
-    </amp-auto-ads>
+    </amp-auto-ads>*@
     <div class="header-top">
         <div class="container">
             <div class="row">
