--- a/Views/Shared/Error.cshtml
+++ b/Views/Shared/Error.cshtml
@@ -24,7 +24,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <ol class="breadcrumb">
-                            <li><i class="fa fa-home pr-10"></i><a href="index.html">Home</a></li>
+                            <li><i class="fa fa-home pr-10"></i><a href="@Url.Action("index","User")">Home</a></li>
                             <li class="active">Error 404</li>
                         </ol>
                     </div>
