--- a/Views/Tutorials/Article.cshtml
+++ b/Views/Tutorials/Article.cshtml
@@ -6,12 +6,39 @@
 <link href="https://myCDN.com/prism@v1.x/themes/prism.css" rel="stylesheet" />
 <script src="https://prismjs.com/prism.js"></script>
 <script src="https://myCDN.com/prism@v1.x/plugins/autoloader/prism-autoloader.min.js"></script>
+<link href="~/codemirror.css" rel="stylesheet" />
+<script src="~/codemirror.js"></script>
 
 <style>
     .articleactive {
         background-color: #efefef !important;
     }
-
+    .code-panel {
+        padding: 1.1rem 1.25rem 0 1.25rem;
+        background-color: #fff;
+        border: 1px solid #2590e3;
+        border-radius: 0;
+        margin-bottom: 1.25rem;
+    }
+    pre {
+        background-color: white !important;
+        border: 0px;
+        
+    }
+    .articlefont {
+        font-size: 16px !important;
+        line-height: 31px;
+        /* text-align: justify; */
+        font-family: Verdana,sans-serif,Geneva !important;
+        color: #000 !important;
+        background: transparent;
+    }
+    h1, h2, h3 {
+        font-family: "Segoe UI",Verdana,sans-serif !important;
+        font-weight: 400 !important;
+        line-height: 1.2 !important;
+        color:#181717 !important;
+    }
     /*  pre {
         padding: 10px 16px;
         border-radius: 2px;
@@ -114,6 +141,12 @@
         var promise = LoadPartialViewPromise('@Url.Action("ArticleDetail", "Tutorials")', "Articlespartialid", { id: id });
         promise.done(function (data) {
             $('#Articlespartialid').html(data);
+            $('pre').each(function (index, elem) {
+                $(elem).wrap("<div class='code-panel'></div>")
+            });
+            $('#Articlespartialid').find('p,div,li,span').each(function (index, elem) {
+                $(elem).addClass("articlefont")
+            }); 
         //$('pre').each(function (index, elem) {
         //   var d = $(this)[0];
         //    for (var i = 0; i < d.childNodes.length; i++) {
